# simulation_apps

./: Cargo.toml  README.md
simulation/: Cargo.toml
simulation/src/: audio.rs  boids.rs  lib.rs  loading.rs  menu.rs
src/: main.rs
