[package]
name = "simulation_apps"
version = "0.1.0"
authors = ["Romy Ranovan <romyranovan@google.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "simulation/default"
]

native = [
    "bevy/bevy_wgpu",
    "simulation/native"
]

web = [
    "bevy_webgl2",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
simulation = {path = "simulation"}
winit = "0.24.0"

bevy_webgl2 = {version = "0.5.0", optional = true}

[build-dependencies]
embed-resource = "1.4"
